test/extern/bradc/vars/externConsts2.good
externConsts2.chpl:4: error: cannot assign to const variable
