test/extern/bradc/vars/externConsts2.chpl
extern const OPTION_ONE:int(32);
extern const OPTION_TWO:int(32);

OPTION_ONE = 543;

